# wazir-drop

./: .gitignore  Cargo.toml  LICENSE  README.md  RULES.md  example.toml  export.toml  learn.toml  match.toml  nnue_stats.html  nnue_stats.md  opening.toml  referee_example.toml  self_play.toml  train.toml  tune.toml  validate.toml
.cargo/: config.toml
external-player/: Cargo.toml
external-player/src/: lib.rs
extra/: Cargo.toml
extra/src/: base128_encoder.rs  lib.rs  linear_eval.rs  linear_ps_weights.rs  linear_wps_weights.rs  moverand.rs  nnue.rs  nnue_wps_weights.rs  ps_features.rs  vector.rs
extra/tests/: base128.rs  eval.rs  features.rs  vector.rs
gen-zobrist/: Cargo.toml
gen-zobrist/src/: main.rs
gui/: Cargo.toml
gui/src/: main.rs
opening/: Cargo.toml
opening/src/: main.rs
random-player/: Cargo.toml
random-player/src/: lib.rs
referee/: Cargo.toml
referee/src/: game.rs  lib.rs  main.rs  opening.rs  run_match.rs
referee/tests/: game.rs  referee.rs  run_match.rs
rules/: Cargo.toml
rules/src/: bitboard.rs  consts.rs  lib.rs  mov.rs  piece.rs  position.rs  square.rs
rules/tests/: bitboard.rs  mov.rs  position.rs  square.rs
setup/: Cargo.toml
setup/src/: main.rs
src/: arrays.rs  base128.rs  base128_decoder.rs  bitboard.rs  board.rs  book.rs  book_data.rs  captured.rs  cli.rs  clock.rs  color.rs  constants.rs  either.rs  enum_map.rs  enums.rs  error.rs  eval.rs  features.rs  history.rs  lib.rs  linear_eval.rs  linear_eval_piece_square_weights.rs  linear_ps_weights.rs  linear_wps_weights.rs  log.rs  main.rs  main_player.rs  mov.rs  movegen.rs  moves.rs  nnue.rs  nnue_weights.rs  parser.rs  piece.rs  platform.rs  player.rs  position.rs  ps_features.rs  pvtable.rs  score.rs  (+9 more)
src/tests/: history.rs  mod.rs  pvtable.rs  ttable.rs
submission/: Cargo.toml
submission/src/: main.rs
tests/: base128.rs  bitboard.rs  board.rs  book.rs  captured.rs  cli.rs  clock.rs  color.rs  enum_map.rs  enums.rs  eval.rs  features.rs  history.rs  mov.rs  movegen.rs  moves.rs  parser.rs  piece.rs  position.rs  score.rs  search.rs  smallvec.rs  square.rs  symmetry.rs  ttable.rs  variation.rs  vector.rs
tools/: build_submission.sh  clear_logs.sh
train/: Cargo.toml
train/src/: config.rs  data.rs  export.rs  learn.rs  linear.rs  main.rs  model.rs  nnue.rs  self_play.rs  util.rs  validate.rs
tune/: Cargo.toml
tune/src/: main.rs
