[package]
name = "wazir-drop"
edition = "2021"

[dev-dependencies]
extra = { path = "extra" }
rand = "0.9.2"

[lints]
workspace = true

[workspace]
resolver = "3"
members = ["external-player", "extra", "gui", "random-player", "referee"]

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "deny"
unused_results = "deny"

[workspace.lints.clippy]
default_trait_access = "deny"
manual_is_multiple_of = "allow"
