[package]
name = "wazir-drop"
edition = "2021"

[lints]
workspace = true

[workspace]
resolver = "3"
members = [
    "external-player",
    "extra",
    "gen-zobrist",
    "gui",
    "random-player",
    "referee",
    "train",
]

[profile.release]
panic = "abort"

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "deny"
unused_results = "deny"

[workspace.lints.clippy]
default_trait_access = "deny"
manual_is_multiple_of = "allow"
new_without_default = "allow"
