[package]
name = "train"
edition = "2024"

[dependencies]
wazir-drop = { path = ".." }
extra = { path = "../extra" }

clap = { version = "4.5.50", features = ["derive"] }
log = "0.4.28"
plotters = "0.3.7"
rand = "0.9.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_cbor = "0.10"
simplelog = "0.12.2"
tch = "0.22.0"
threadpool = "1.8.1"
toml = "0.9.8"

[lints]
workspace = true